versioned_docs/version-2.x/getting-started/pro-license.mdx
---
title: Installing WCPOS Pro
description: "If you have purchased the Pro version please follow the steps below to install the plugin."
sidebar_label: WCPOS Pro
sidebar_position: 3
---

:::info Pro Feature
[WCPOS Pro](https://wcpos.com/pro) is a paid plugin that powers the management screens, additional payment gateways, and other Pro-only features in WCPOS.

**As of v1.8+, Pro is a standalone plugin** — you do not need the free [WCPOS plugin](https://wordpress.org/plugins/woocommerce-pos/) installed alongside it.
:::

## What's Included in Pro? {#whats-included-in-pro}

WCPOS Pro unlocks additional features:

- **Products Screen** - Edit stock levels and prices directly in the POS
- **Orders Screen** - View and manage order history
- **Customers Screen** - Add and edit customer information
- **Reports Screen** - Generate end-of-day sales reports
- **Additional Payment Gateways** - Stripe Terminal, SumUp, and custom gateways

## Installation {#installation}

If you have purchased a license for WCPOS Pro please follow the steps below to install and activate the plugin:

:::note Upgrading from older versions?
If you previously had both the free WCPOS plugin and an older Pro add-on installed, **deactivate and delete the free plugin** before activating the new standalone Pro plugin. Running both side-by-side can cause activation errors such as *"Invalid response fetching remote state"* or fatal *"Class not found"* errors.
:::

1. Go to: [https://wcpos.com/my-account/](https://wcpos.com/my-account/)
2. Under **Downloads**, click the download link and save the plugin to your desktop.
3. Then go to your site, login and go to `WP Admin > Plugins > Add Plugin > Upload Plugin`
4. Upload the plugin zip file from your desktop and activate.
5. Next, go to `WP Admin > POS > Settings > License` and enter your License Key and License Email to complete the activation.

![My Downloads](https://wcpos.com/wp-content/uploads/2014/07/my-download.png "You can download WCPOS Pro on your account page")

## Updates {#updates}

When new versions are ready they will appear in your Updates dashboard like any other plugin. You can also download the latest version from your [account page](https://wcpos.com/my-account/).

## Uninstalling Pro and your data {#uninstalling}

Uninstalling the Pro plugin removes Pro's own operational data, but it **preserves your Pro settings (including the licence key) and your store configuration** so that reinstalling picks up where you left off. Shared translation data is only removed once the **free** plugin has also been uninstalled, so removing Pro alone never disturbs the free plugin.

If you want a genuine clean slate — removing settings, licence, and store configuration as well — opt into a full wipe by defining `wcpos_remove_all_data` before uninstalling. Without it, uninstalling is safe and reversible.

## Troubleshooting {#troubleshooting}

### Activation Failures {#activation-failures}

- **"Invalid licence key"** — double-check for trailing spaces when pasting, and confirm the email address matches the one used at purchase.
- **"Licence limit reached"** — by default a licence activates on **2 domains** (intended for one live site and one staging site). Note that **subdomains count as separate activations** — `example.com`, `staging.example.com`, and `dev.example.com` are three. This often catches hosts like Pantheon with mandatory dev/test/live environments. Deactivate unused sites from your [account page](https://wcpos.com/my-account/), or email **support@wcpos.com** — extra activations are routinely granted on request.

### Expired Licence {#expired-licence}

- When a licence expires, Pro features remain active but you won't receive updates.
- Renew from your [account page](https://wcpos.com/my-account/) — the existing key stays the same.

### Domain Transfers {#domain-transfers}

- If you've moved your site to a new domain, deactivate the licence on the old domain first, then reactivate on the new one.
- If the old domain is no longer accessible, contact **support@wcpos.com** to reset the activation.

### Licence Server Connectivity {#licence-server-connectivity}

- Activation requires your WordPress server to reach the WCPOS licence server.
- If activation fails silently, check that outbound HTTPS requests aren't blocked by your host's firewall or a security plugin.
- Some managed hosts block external API calls by default — contact your host to whitelist `wcpos.com`.

### Checking Licence Status {#checking-licence-status}

- Go to `WP Admin > POS > Settings > License` to see your current activation status.
- Your [account page](https://wcpos.com/my-account/) shows all active sites and expiry date.

## Purchase a License {#purchase-a-license}

Visit [wcpos.com/pro](https://wcpos.com/pro) to purchase a Pro license.

:::note Buying and upgrading happen on the website
There's no in-app "upgrade to Pro" button — purchases, plan upgrades, and renewals are all handled on [wcpos.com](https://wcpos.com/pro) and your [account page](https://wcpos.com/my-account/). After buying, install Pro using the [steps above](#installation).
:::
